replace usages of Set.of()