@@ -10,7 +10,7 @@ import org.junit.Test;
 
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.Set;
+import java.util.HashSet;
 
 public class AbstractGridMultiSelectionModelWithHierarchicalDataProviderTest {
     private TreeGrid<String> treeGrid;
@@ -168,20 +168,22 @@ public class AbstractGridMultiSelectionModelWithHierarchicalDataProviderTest {
         // Select all
         // with hierarchical data provider we can not detect whether all are
         // selected, so should still be indeterminate
-        treeGrid.asMultiSelect().updateSelection(Set.of("foo", "bar"),
-                Set.of());
+        treeGrid.asMultiSelect().updateSelection(
+                new HashSet<>(Arrays.asList("foo", "bar")), new HashSet<>());
         Assert.assertFalse((boolean) columnElement.getPropertyRaw("selectAll"));
         Assert.assertTrue(
                 (boolean) columnElement.getPropertyRaw("indeterminate"));
 
         // Deselect single
-        treeGrid.asMultiSelect().updateSelection(Set.of(), Set.of("foo"));
+        treeGrid.asMultiSelect().updateSelection(new HashSet<>(),
+                new HashSet<>(Collections.singletonList("foo")));
         Assert.assertFalse((boolean) columnElement.getPropertyRaw("selectAll"));
         Assert.assertTrue(
                 (boolean) columnElement.getPropertyRaw("indeterminate"));
 
         // Deselect all
-        treeGrid.asMultiSelect().updateSelection(Set.of(), Set.of("bar"));
+        treeGrid.asMultiSelect().updateSelection(new HashSet<>(),
+                new HashSet<>(Collections.singletonList("bar")));
         Assert.assertFalse((boolean) columnElement.getPropertyRaw("selectAll"));
         Assert.assertFalse(
                 (boolean) columnElement.getPropertyRaw("indeterminate"));
